# PocketMesh

./: .ai-todo.md  .gitignore  .swiftlint.yml  CLAUDE.md  CONTRIBUTING.md  PRD.md  README.md  TDG.md  TRANSLATIONS.md  project.yml  swiftgen.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-ipa.yml  test.yml  testflight.yml
AppIcon.icon/: icon.json
MC1/: ContentView.swift  Info-Debug.plist  Info.plist  MC1App.swift
MC1Services/: Package.swift
MC1Tests/: ChatViewModelQueueTests.swift
MC1Widgets/: Info.plist  MC1WidgetsBundle.swift
MeshCore/: Package.resolved  Package.swift  README.md
PocketMesh/: AppState.swift  BatteryMonitor.swift  ConnectionUIState.swift  ContentView.swift  Info-Debug.plist  Info.plist  NavigationCoordinator.swift  PocketMeshApp.swift
PocketMesh.xcodeproj/: project.pbxproj
PocketMeshKit/: PocketMeshKit.swift  README.md
PocketMeshKitTests/: RadioOptionsTests.swift
PocketMeshServices/: Package.swift
PocketMeshTests/: ChannelTests.swift  HardwareTestChecklist.md  MessageRetryTests.swift  MultiDeviceTestProcedures.md  PerformanceTests.swift  ProtocolTests.swift
PocketMeshWidgets/: MeshStatusLiveActivity.swift
docs/: ARCHITECTURE.md  Architecture.md  Development.md  Glossary.md  PROTOCOL.md  Reactions.md  TESTING.md  Testing.md  User_Guide.md
fastlane/: Fastfile
scripts/: test_mock_contact_integration.swift
scripts/meshcore-enum-generator/: README.md  meshcore_enum_generator.py  pyproject.toml
scripts/meshcore-enum-generator/src/meshcore_enum_generator/: __init__.py
(+1087 files in other folders)
