[project]
name = "meshcore-enum-generator"
version = "1.0.0"
description = "Sync MeshCore Python enums with Swift ProtocolFrame.swift"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0"
]

# Optional dependency for better UI
[project.optional-dependencies]
ui = ["rich>=13.7.0"]

[project.scripts]
meshcore-sync = "meshcore_enum_generator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
